--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@angular/compiler-cli": "^15.1.0",
     "@angular/localize": "^15.1.0",
     "@types/jasmine": "~4.3.0",
+    "jasmine": "^4.6.0",
+    "jasmine-browser-runner": "^1.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
